# gpt_sovits_plugin

./: .gitignore  Cargo.toml  QuickStart.md  README.md  config.json  download_model.sh  download_model.v2pro.cuda.sh  download_model.v3.cuda.sh  download_model.v3.mps.sh  download_model.v4.cuda.sh
.github/workflows/: release.yml
gpt_sovits_wasm/: Cargo.toml
gpt_sovits_wasm/src/: main.rs
src/: lib.rs  tts.rs
