[package]
name = "gpt_sovits_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmedge_plugin_sdk = { version = "0.3", git = "https://github.com/second-state/wasmedge_plugin_rust_sdk" }
anyhow = "1.0.87"
wav_io = "0.1.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gpt_sovits_rs = { version = "0.2.0" }

[features]
standalone = ["wasmedge_plugin_sdk/standalone"]

[workspace]
members = ["gpt_sovits_wasm"]
